# Bachelorarbeit-HFT-Quellcode

./: README.md
MicroModATP/: Start_nRF52840.SVDat
MicroModATP/nRF52840_nRF52840_DK/: ReadMe.txt  Start_nRF52840.emProject  Start_nRF52840.emSession  Start_nRF52840.jdebug
MicroModATP/nRF52840_nRF52840_DK/Application/: OS_EventObjects.c  OS_ExtendTaskContext.c  OS_ExtendedTask.c  OS_Mailboxes.c  OS_MeasureCPU_Performance.c  OS_MeasureCST_HRTimer_Printf.c  OS_MeasureCST_HRTimer_embOSView.c  OS_MeasureCST_Scope.c  OS_ObjectIdentifier.c  OS_Queues.c  OS_ReadersWriterLock.c  OS_SWTimer.c  OS_Semaphores.c  OS_Start2Tasks.c  OS_Start2Tasks.cpp  OS_Start2TasksEx.c  OS_StartLEDBlink.c  OS_Stop.c  OS_TaskStartHook.c  OS_ThreadLocalStorage.c  OS_Watchdog.c
MicroModATP/nRF52840_nRF52840_DK/DeviceSupport/: ses_startup_nrf52840.s  ses_startup_nrf_common.s
MicroModATP/nRF52840_nRF52840_DK/Output/Debug/Exe/: Start_nRF52840.elf  Start_nRF52840.map
MicroModATP/nRF52840_nRF52840_DK/SEGGER/: SEGGER_RTT_Conf.h  SEGGER_RTT_Syscalls_SES.c  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_ConfDefaults.h
MicroModATP/nRF52840_nRF52840_DK/Setup/: BSP.c  OS_ThreadSafe.c  RTOSInit_nRF5x.c  SEGGER_THUMB_Startup.s  ses_nrf52840_xxaa.icf
NRF52DK/nimble_gatt_sht3x/: Makefile  README.md
Nur Quellcode/NRF52DK/: riot_nimble_gatt.c
Nur Quellcode/RP2040/: la_ola_5.c
Nur Quellcode/STM32F411/: hello_world.c  serial_stopwatch_8_2.c
RP2040/la_ola_5/: CMakeLists.txt
RP2040/pwm_5/: CMakeLists.txt  pwm_6.c
STM32F411/hello_world/: .cproject  .mxproject  hello_world Debug.launch  hello_world.ioc
STM32F411/hello_world/Debug/: hello_world.elf  hello_world.list  hello_world.map  makefile  objects.list
STM32F411/hello_world/Debug/Core/Src/: main.su
STM32F411/serial_stopwatch_8_2/: .cproject  .mxproject  .project  serial_stopwatch_8_2 Debug.launch  serial_stopwatch_8_2.ioc
STM32F411/serial_stopwatch_8_2/Core/Inc/: stm32f4xx_it.h
STM32F411/serial_stopwatch_8_2/Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32F411/serial_stopwatch_8_2/Debug/: makefile  serial_stopwatch_8_2.elf  serial_stopwatch_8_2.list  serial_stopwatch_8_2.map
STM32F411/serial_stopwatch_8_2/Debug/Core/Src/: main.su  stm32f4xx_hal_msp.su  stm32f4xx_it.su
